<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--Application value-->
    <string name="app_name">Scheme Creator</string>
    <string name="action_settings">Settings</string>

    <!--Activity value-->
    <string name="title_activity_file">FileActivity</string>
    <string name="title_activity_document">DocumentActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!--Dialog title-->
    <string name="dialog_edit">Action</string>
    <string name="dialog_info">Message</string>
    <string name="dialog_error">Error</string>
    <string name="dialog_warning">Warning</string>

    <!--Dialog button-->
    <string name="btn_positive">OK</string>
    <string name="btn_negative">Cancel</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>

    <!--MainActivity value-->
    <string name="label_choose_action">Choose action:</string>
    <string name="btn_new_doc">New</string>
    <string name="btn_open_doc">Open</string>
    <string name="btn_doc_settings">Settings</string>
    <string name="label_recent_files">Recent files:</string>

    <!--FileActivity value-->
    <string name="msg_edit_file_name">Edit file name:</string>
    <string name="msg_error_save_file">The file can\'t be saved.</string>
    <string name="msg_error_delete_file">The file can\'t be deleted.</string>

    <!--DocumentActivity value-->
    <!--Model settings-->
    <string name="title_model_settings">Model settings</string>
    <!--Creation date:-->
    <string name="label_model_creation_date">Creation date:</string>
    <string name="label_model_title">Title:</string>
    <string name="label_model_author">Author:</string>
    <string name="label_model_project">Project:</string>
    <string name="label_model_name">Model:</string>
    <string name="btn_model_clear">Reset</string>

    <string name="msg_edit_box_text">Enter text:</string>
    <string name="msg_edit_label_text">Enter text:</string>
    <string name="msg_edit_create_diagram">Create a new diagram?</string>
    <string name="msg_edit_save_before_close">Save the document before closing?</string>
    <string name="msg_edit_new">Close the current document? All unsaved data will be lost.</string>
    <string name="msg_edit_open">Close the current document? All unsaved data will be lost.</string>
    <string name="msg_error_read_file">Error reading file.</string>
    <string name="msg_error_write_file">Error writing file.</string>

    <!--SettingsActivity value-->
    <!--Application settings-->
    <string name="title_app_settings">Application settings</string>
    <string name="label_app_author">Author:</string>
    <!--Save data on:-->
    <string name="label_app_storage">Store data on:</string>
    <string name="label_app_storage_dir">The current directory:</string>
    <string name="msg_app_storage_dir">Files IDEF-models will be stored in a folder </string>

    <string name="btn_app_settings_save">Save</string>
    <string name="btn_app_settings_about">About</string>
    <string name="btn_app_settings_reset">Reset</string>

    <string name="msg_info_about_app">Application information.</string>
    <string name="msg_edit_reset_settings">Сбросить настройки приложения?</string>
    <!--"Application can't find SD card. The application files will be stored in the device memory."-->
    <string name="msg_warning_no_sdcard">Приложение не может найти SD карту. Файлы приложения будут сохранены в памяти устройства.</string>
    <!--"SD card not available for application. The application files will be stored in the device memory."-->
    <string name="msg_warning_sdcard_not_available">Приложение не может получить доступ к SD карте. Файлы приложения будут сохранены в памяти устройства.</string>

    <color name="select_blue">#75BCFF</color>
    <color name="silver">#C0C0C0</color>

</resources>
