<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:text="@string/label_choose_action"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/start_button" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/new_doc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_new_doc"
                android:onClick="newDocument"/>

            <Button
                android:id="@+id/open_doc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_open_doc"
                android:onClick="openDocument"/>

            <Button
                android:id="@+id/doc_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_doc_settings"
                android:onClick="openSettings"/>
        </LinearLayout>


        <LinearLayout
            android:layout_below="@+id/recent_file_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_recent_files"
                android:textSize="20dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ListView
                android:id="@+id/recent_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ListView>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
